Fixed z-index to menu on small screens for the menu to be above the slider nav

--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -61,7 +61,7 @@
                 right: 0;
                 bottom: 0;
                 left: calc(121 / 375 * 100vw);
-                z-index: 1;
+                z-index: 2;
             }
             ul {
                 margin-top: 11.8rem;
